# docker-eniam

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  domparser.sh  eniam.py  print_lexicon  setup.py  subsyntax  subsyntax.sh  uruchamianie.txt
data/: lexicon.dic  mwe.tab  mwe2.tab  ne.tab  proper_cats.tab  sem-lexicon.dic  valence.dic
eniam/: __init__.py  eniam_core.py  eniam_syntax.py
eniam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eniam_src/: Dockerfile  README.md  compile.sh  compile2.sh  compile3.sh  compile_subsyntax.sh  config  moveToMozart.sh
eniam_src/LCGlexicon/: ENIAM_LCGlexicon.ml  ENIAM_LCGlexiconLatexOf.ml  ENIAM_LCGlexiconParser.ml  ENIAM_LCGlexiconTypes.ml  ENIAM_LCGlexiconTypes_old.ml  ENIAM_LCGlexicon_old.ml  ENIAMcategoriesPL.ml  ENIAMcategoriesPL_old.ml  eniam-lcg-lexicon-1.0.tar.bz2  makefile  test.ml
eniam_src/LCGparser/: ENIAM_LCG_XMLof.ml  ENIAM_LCGchart.ml  ENIAM_LCGgraphOf.ml  ENIAM_LCGlatexOf.ml  ENIAM_LCGreductions.ml  ENIAM_LCGrenderer.ml  ENIAM_LCGrules.ml  ENIAM_LCGstringOf.ml  ENIAM_LCGtypes.ml  eniam-lcg-parser-1.0.tar.bz2  eniam-lcg-parser-2.0.tar.bz2  eniam-lcg-parser-2.1.tar.bz2  eniam-lcg-parser-2.2.tar.bz2  makefile  test.ml
eniam_src/NKJP/: NKJP.ml  NKJP.mli  NKJPxmlbasics.ml  README.txt  clean.sh  makefile  parse.sh  sentenceCompare.ml  test.ml  validate.sh
eniam_src/NKJP2/: .gitignore  ENIAM_NKJP.ml  convertCONLL.ml  makefile  spelling.ml  validateMorphology.ml  validateSubsyntax.ml  validateTokenizer.ml
eniam_src/XmlToConll/: CONLL.ml  ConllComparator.ml  makefile
eniam_src/corpora/: CONLL.ml  CONLL2.ml  LCGfields.ml  README  conllParser.ml  freq_test.ml  generate.ml  interpsInCorpus.ml  makefile  resources.ml  struktura do NKJP.txt  test_conll.ml  test_conll2.ml  types.ml  validateTokenizer.ml
eniam_src/documentation/: .gitignore  inno.txt  motto.txt  mrl_definition.tex  semantic_construction.tex  technical_doc.tex  user_manual.tex
eniam_src/exec/: ENIAMexec.ml  ENIAMexecTypes.ml  ENIAMexecXMLof.ml  ENIAMselectSent.ml  ENIAMvisualization.ml  apiInterface.ml  makefile  parser.ml  semparser.ml  uruchamianie.txt  uruchamianie_api.txt  webInterface.ml  webInterface2.ml  (+1 more)
eniam_src/tools/maca/: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.MACA  LICENSE.SFST  LICENSE.in  README.md  licensify.sh  maca_test.ml
eniam_src/tools/maca/CMakeScripts/: FindCorpus.cmake  FindCorpus2.cmake  FindMorfeusz.cmake  FindPwrUtils.cmake  FindSFST.cmake  FindToki.cmake
eniam_src/tools/maca/data/: INFO.txt  acro-infl-compact.txt  acro-infl.fst  acro-uninfl-compact.txt  acro-uninfl.fst  guesser-dicts-naivenkjp.ini  guesser-naivenkjp.ini  ikipi2kipi.conv  kipi2ikipi.conv  kipi2simple.conv  kipi2skladnica.conv  kipi2strictkipi.conv  mm-sgjp.conv  mm.conv  morfeusz-ikipi-ext.ini  morfeusz-ikipi.ini  morfeusz-kipi-ext.ini  morfeusz-kipi-guesser.ini  morfeusz-kipi.ini  morfeusz-nkjp-guesser.ini  morfeusz-nkjp-official-guesser.ini  morfeusz-nkjp-official.ini  morfeusz-nkjp.ini  morfeusz.ini  morfeusz2-nkjp.ini  morfeusz2-to-nkjp.conv  morfeusz2-to-sgjp.conv  morfeusz2kipi.conv  morfkipi2ikipi.conv  morfo1222-ikipi.ini  morfo1222-lower.fst  morfpatch-kipi.txt  morfsgjp-kipi.ini  morfsgjp2kipi.conv  naive-kipi2nkjp.conv  nkjp2beatca.conv  nkjp2kipi.conv  nkjp2skladnica.conv  polimorf-nkjp.ini  polimorf-sgjp.ini  (+4 more)
eniam_src/tools/maca/doc/: Plugins.txt  SFST-Howto.txt  Tagsets.txt  Writing_configs.txt  api-example.cpp  maca_analyse.py
eniam_src/tools/maca/libmaca/: CMakeLists.txt  boilerplate.cpp.in  boilerplate.h.in  config_d.in  exception.cpp  exception.h  main.cpp  mk.sh  typedefs.h  version.in
eniam_src/tools/maca/libmaca/conv/: attributecopier.cpp  attributecopier.h  fold.cpp  fold.h  joinlayer.cpp  joinlayer.h  joinrule.cpp  joinrule.h  layer.cpp  layer.h  predicate.cpp  predicate.h  removedupes.cpp  removedupes.h  splitlayer.cpp  splitlayer.h  tagconvert.cpp  tagconvert.h  tagrule.cpp  tagrule.h  tagrulelayer.cpp  tagrulelayer.h  tagsetconverter.cpp  tagsetconverter.h
eniam_src/tools/maca/libmaca/io/: premorph.cpp  premorph.h  text.cpp  text.h
eniam_src/tools/maca/libmaca/morph/: constanalyser.cpp  constanalyser.h  convertinganalyser.cpp  convertinganalyser.h  dispatchanalyser.cpp  dispatchanalyser.h  guesser.cpp  guesser.h  guesser2.cpp  guesser2.h  mapanalyser.cpp  mapanalyser.h  morfeusz2analyser.cpp  morfeusz2analyser.h  morfeuszanalyser.cpp  morfeuszanalyser.h  morphanalyser.cpp  morphanalyser.h  sfstanalyser.cpp  sfstanalyser.h
eniam_src/tools/maca/libmaca/util/: confignode.cpp  confignode.h  debug.cpp  debug.h  sentenceanalyser.cpp  sentenceanalyser.h  settings.cpp  settings.h  symboldictionary.cpp  symboldictionary.h  tokentimer.cpp  tokentimer.h
eniam_src/tools/maca/maca-analyse/: CMakeLists.txt  batch.cpp  main.cpp
eniam_src/tools/maca/maca-convert/: CMakeLists.txt  main.cpp
eniam_src/tools/maca/maca-reanalyse/: CMakeLists.txt  main.cpp
eniam_src/tools/maca/swig/: CMakeLists.txt  maca.i  makewrapper.sh  plaintextreader.i  premorphtextreader.i  swig_template_maca.template
eniam_src/tools/maca/tests/: CMakeLists.txt  compareconv.cpp  compareconv.h  conv.cpp  gen.sh  main.cpp  morph_basic.cpp  test-sanity.sh
eniam_src/tools/maca/tests/compare-conv/: test.conv  test.in  test.out
eniam_src/tools/maca/tests/compare-conv/join-split/: dis-joined1.xml  dis-joined2.xml  dis-plain1.xml  dis-plain2.xml  joined.tagset  joined1.xml  joiner.conv  joiner1.conv  joiner1.in  joiner1.out  joiner2.in  joiner2.out  joiner3.in  plain.tagset  plain1.xml  splitter.conv  splitter3.conv  splitter3.in
eniam_src/tools/maca/tests/large/: a01.txt  a02.txt  c01.txt  c02.txt  k15.txt  p01.txt  p02.txt  r01.txt  r02.txt  w01.txt  w02.txt  z01.txt  z02.txt
eniam_src/tools/maca/tests/small/: 1000.txt  2000.txt  4000.txt  8000.txt  pl1.txt  pl2.txt
eniam_src/tools/maca/tools/: bash_completion_maca  button.sh  purge.sh  readutt.py  snippets  tab-to-sfst-now  tab-to-sfst.cpp  tab-to-sfst.py  tabclean.py  tabtagset.py  test_tabdecomp  test_tablines.py  utt.remap
examples/: Untitled.ipynb  example.ipynb  out.tsv
(+4923 files in other folders)
